added chatbot with web functionality with frontend and graph building , Toolnode logic still pending

--- a/src/langgraph/ui/uiconfigfile.ini
+++ b/src/langgraph/ui/uiconfigfile.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
 PAGE_TITLE = LangGraph: Build Stateful Agentic AI graph
 LLM_OPTIONS = Groq
-USECASE_OPTIONS = Basic Chatbot
-GROQ_MODEL_OPTIONS = mixtral-8x7b-32768, llama3-8b-8192, llama-3.1-8b-instant, gemma2-9b-it
+USECASE_OPTIONS = Basic Chatbot, Chatbot With Web
+GROQ_MODEL_OPTIONS = llama-3.1-8b-instant, gemma2-9b-it, deepseek-r1-distill-llama-70b
